; ModuleID = '/home/carl/AnghaBench/lab/q3map2/q3map2/extr_bspfile_abstract.c_WriteBSPFile.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/q3map2/extr_bspfile_abstract.c_WriteBSPFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i8*)* }

@game = common dso_local global %struct.TYPE_2__* null, align 8
@.str = private unnamed_addr constant [42 x i8] c"WriteBSPFile: unsupported BSP file format\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"%s.%08X\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @WriteBSPFile(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca [1024 x i8], align 16
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @game, align 8
  %6 = icmp eq %struct.TYPE_2__* %5, null
  br i1 %6, label %12, label %7

7:                                                ; preds = %1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @game, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32 (i8*)*, i32 (i8*)** %9, align 8
  %11 = icmp eq i32 (i8*)* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %7, %1
  %13 = call i32 @Error(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %12, %7
  %15 = call i32 @time(i64* %4)
  %16 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %17 = load i8*, i8** %2, align 8
  %18 = load i64, i64* %4, align 8
  %19 = trunc i64 %18 to i32
  %20 = call i32 @sprintf(i8* %16, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %17, i32 %19)
  %21 = call i32 (...) @SwapBSPFile()
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** @game, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32 (i8*)*, i32 (i8*)** %23, align 8
  %25 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %26 = call i32 %24(i8* %25)
  %27 = call i32 (...) @SwapBSPFile()
  %28 = load i8*, i8** %2, align 8
  %29 = call i32 @remove(i8* %28)
  %30 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %31 = load i8*, i8** %2, align 8
  %32 = call i32 @rename(i8* %30, i8* %31)
  ret void
}

declare dso_local i32 @Error(i8*) #1

declare dso_local i32 @time(i64*) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*, i32) #1

declare dso_local i32 @SwapBSPFile(...) #1

declare dso_local i32 @remove(i8*) #1

declare dso_local i32 @rename(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
